--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 
-      .table1{
+      .table{
                 border-collapse:collapse;
                         margin-left: 1%;
              } 
-            .table1, .table1 td, .table1 th {
+            .table, .table td, .table th {
 	 border: 1px solid black;
                  padding: 5px;
              }
-             .table1 th {
+             .table th {
                   background-color: #4CAF50;
                   color: white;
              }
