--- a/style.css
+++ b/style.css
@@ -1,13 +1,28 @@
+body {
+      background-color: lightblue;
+     }
+.buttonM {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
 
-      .table{
-                border-collapse:collapse;
-                        margin-left: 1%;
-             } 
-            .table, .table td, .table th {
-	 border: 1px solid black;
-                 padding: 5px;
-             }
-             .table th {
-                  background-color: #4CAF50;
-                  color: white;
-             }
+.buttonF {
+  background-color: #fc8003;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
